--- a/src/App-2.css
+++ b/src/App-2.css
@@ -67,6 +67,8 @@
     left: 0px;
     background: rgba(0, 0, 0, 0.3);
     filter: blur(20px);
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
 }
 
 .book-xmark{
@@ -177,7 +179,7 @@
 .for-scroll{
     width: 100vw;
     position: absolute;
-    top: 67px;
+    top: 37px;
     overflow: auto;
     height: calc(100vh - 93px);
 }
@@ -349,6 +351,7 @@
     width:110px;
     height:110px;
     left: calc(50vw - 55px);
+    border-radius: 55px;
 }
 .setting-add-img{
     position: fixed;
