--- a/src/App.css
+++ b/src/App.css
@@ -237,7 +237,7 @@ body{
 .ContentHome{
   width: 100%;
   position: absolute;
-  top: 353px;
+  top: 273px;
 }
 
 .kitob-all{
@@ -291,6 +291,11 @@ body{
   border-radius: 3px;
   box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.25);
   margin-left: 0px;
+}
+
+.kitob-card-img-container{
+  height: 140px;
+  width: 95.5px;
 }
 
 .kitob-card-head{
@@ -622,6 +627,8 @@ body{
   z-index: 60;
 
 }
+
+
 
 
 
