--- a/src/App-2.css
+++ b/src/App-2.css
@@ -189,7 +189,8 @@
 }
 .order-img{
     display: inline-block;
-    width: 90px;
+    width: 95.5px;
+    height: 140px;
     box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.25);
     border-radius: 3px;
     padding: 0px;
